--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,3 +1,3 @@
 <app-card *ngFor="let content of contents" [contents]="content">
-  <div>hello</div>
 </app-card>
+<app-card-material *ngFor="let content of contents" [contents]="content"></app-card-material>
